--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/logo_buses_venegas_sa.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buses Venegas S.A. - Sistema de Reservas</title>
     <!-- Font Awesome para iconos -->
